--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "rewrites": [
-    {
-      "source": "/bfhl",
-      "destination": "/api/bfhl"
-    }
+    { "source": "/bfhl", "destination": "/api/bfhl" }
   ]
 }
